// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Summaries renders default 1`] = `
<div
  className="Summaries"
/>
`;

exports[`Summaries renders error 1`] = `
<div
  className="Summaries"
>
  <div
    className="my-4 text-center"
  >
    <div
      className="alert my-3 font-weight-bold alert-danger"
    >
      ¡Ratas! Parece que no estás conectado a internet. Intenta refrescar la página o pulsa el siguiente botón.
    </div>
    <button
      className="btn btn-outline-primary btn-sm"
      onClick={[Function]}
    >
      Volver a intentar
    </button>
  </div>
</div>
`;

exports[`Summaries renders loader 1`] = `
<div
  className="Summaries"
>
  <div
    className="my-4 text-center"
  >
    <i
      className="fa fa-spin fa-spinner fa-2x"
    />
  </div>
</div>
`;

exports[`Summaries renders summaries 1`] = `
<div
  className="Summaries"
>
  <div
    className="Summary card"
  >
    <div
      className="Shout"
    >
      <div
        className="Shout-head"
      >
        <div
          className="Score-display"
        >
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-up"
            />
          </button>
          <div
            className="Score-votes"
          >
            13.7k
          </div>
          <button
            className="Score-vote"
            disabled={false}
            onClick={[Function]}
          >
            <i
              className="fa fa-arrow-down"
            />
          </button>
        </div>
        <a
          className="Shout-thumbnail"
          href="/story/tienen-que-shoutear-minas-asi_z50xj"
          onClick={[Function]}
        >
          <img
            alt="Thumbnail"
            src="https://k60.kn3.net/taringa/1/8/3/5/9/3/15/f3d3_14/61D.jpg"
          />
        </a>
        <div
          className="Shout-info"
        >
          <a
            className="Shout-title text-dark"
            href="/story/tienen-que-shoutear-minas-asi_z50xj"
            onClick={[Function]}
          >
            Tienen que shoutear minas asi
          </a>
          <p
            className="Shout-meta"
          >
            Posteado por
            <a
              href="/user/F3D3_14"
            >
              F3D3_14
            </a>
            <time
              dateTime="2017-12-22T05:28:22.005Z"
              title="2017-12-22 05:28"
            >
              hace 1 mes
            </time>
          </p>
          <div
            className="Shout-actions"
          >
            <button
              className="btn btn-action"
              onClick={[Function]}
              title="Vista previa"
            >
              <i
                className="fa fa-expand"
              />
            </button>
            <button
              className="btn btn-action"
              title="Comentar"
            >
              <i
                className="fa fa-comments"
              />
              8k
               comentarios
            </button>
            <button
              className="btn btn-action"
              title="Compartir"
            >
              <i
                className="fa fa-retweet"
              />
              4.5k
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
